tests-integration/tests/roundtrip/invalid/semantic/index_out_of_bounds/input.essence
letting s be tuple(0,1,1,0)
letting t be tuple(0,0,0,1)
find a : bool such that a = (s[5] = t[1]) $ true